--- a/styles/sass/responsive.scss
+++ b/styles/sass/responsive.scss
@@ -28,6 +28,7 @@
 		div.row.resume-title-row {
 			.col-md-8,
 			.col-md-4 {
+				margin-left: -20px;
 				float: none !important;
 				text-align: center !important;
 				h1 {
